--- a/src/components/Input.css
+++ b/src/components/Input.css
@@ -9,7 +9,9 @@
   font-family: inherit;
   background-color: #ffffff;
   color: #495057;
-  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  transition:
+    border-color 0.15s ease-in-out,
+    box-shadow 0.15s ease-in-out;
 }
 
 /* Focus state */
