--- a/src/tabs/MagForge/MagForge.css
+++ b/src/tabs/MagForge/MagForge.css
@@ -16,7 +16,7 @@
 .magforge-media {
   display: flex;
   flex-direction: column;
-  overflow-y: auto;
+  overflow: hidden;
   border-right: 1px solid #e0e0e0;
   padding-right: 16px;
 }
